inject-routes/test/fn.yaml
apiVersion: config.kubernetes.io/v1
kind: ResourceList
items:
- apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    name: echo-server-insecure
  spec:
    entryPoints:
      - web
    routes:
      - match: Host(`test.com`)
        kind: Rule
        services:
          - name: echo-server
            port: 80
      - match: Host(`test-secure.com`) && Path(`/vpn`)
        kind: Rule
        middlewares:
          - name: vpn-only
            namespace: traefik
        services:
          - name: echo-server
            port: 80
    tls:
      secretName: echo-server-insecure-cert
functionConfig:
  apiVersion: fn.kpt.dev/v1alpha1
  kind: SetRoutes
  metadata:
    name: setroutes-fn-config
  data:
    app: testapp
    hosts:
    - domain1.test.com
    - domain2.test.com
    route:
      match: Path(`/test1`)
      kind: Rule
